# mini-search-engine

./: .gitignore  CMakeLists.txt  LICENSE  README.md  UPDATES.MD
src/: CMakeLists.txt  document.cpp  document.hpp  helpers_function.cpp  helpers_function.hpp  main.cpp  search_engine.cpp  search_engine.hpp
tests/: CMakeLists.txt  doc_test.cpp  engine_test.cpp
